Atualização de Elementos

--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
                 <a href="#secao6"><button>Como funciona</button></a>
             </div>
         </div>
-        <div alt="Imagem de enchente" class="secao-imagem logo-imagem"></div>
+        <div alt="Logo HydroSafe Tech" class="secao-imagem logo-imagem"></div>
     </div>
     <main>
         <section class="secao" id="secao1">
-            <div alt="Imagem de enchente" class="secao-imagem"></div>
+            <div alt="Imagem de enchente acima do joelho ocorrendo em uma área residencial" class="secao-imagem"></div>
             <div class="secao-texto section">
                 <h1 class="titulo">O problema que resolvemos</h1>
                 <p class="paragrafo">Enchentes urbanas no Brasil causam perdas humanas e econômicas significativas, especialmente em áreas vulneráveis com infraestrutura deficiente.</p>
@@ -115,10 +115,10 @@
                     </div>
                 </div>
             </div>
-            <div alt="Imagem de enchente" class="secao-imagem img2"></div>
+            <div alt="Representação da Inteligência Artificial, com um aspecto humano mas feito de materiais metálicas e com AI escrito no meio" class="secao-imagem img2"></div>
         </section>
         <section class="secao" id="secao3">
-            <div alt="Imagem de enchente" class="secao-imagem img3"></div>
+            <div alt="Imagem de um mapa de uma região urbana, representado o processo de antecipar desastres naquela região" class="secao-imagem img3"></div>
             <div class="secao-texto section">
                 <h1 class="titulo">Objetivos que pretendemos alcançar</h1>
                 <p class="paragrafo">Queremos antecipar desastres, reduzindo perdas humanas e econômicas com alertas eficazes e decisões estratégicas baseadas em dados.</p>
@@ -193,10 +193,10 @@
                     </div>
                 </div>
             </div>
-            <div alt="Imagem de enchente" class="secao-imagem img4"></div>
+            <div alt="Imagem de comunidade ribeirinho, população que vive próxima a rios" class="secao-imagem img4"></div>
         </section>
         <section class="secao" id="secao5">
-            <div alt="Imagem de enchente" class="secao-imagem img5"></div>
+            <div alt="Imagem de uma família como um recorte de papel, representando a segurança social (um dos benefícios que propomos)" class="secao-imagem img5"></div>
             <div class="secao-texto section">
                 <h1 class="titulo">Benefícios oferecidos</h1>
                 <p class="paragrafo">Nossa solução oferece alertas personalizados, comunicação eficiente e dados estratégicos para prevenir riscos e orientar ações urbanas seguras.</p>
@@ -269,7 +269,7 @@
                     </div>
                 </div>
             </div>
-            <div alt="Imagem de enchente" class="secao-imagem img6"></div>
+            <div alt="Imagem da Tela Inicial do nosso Aplicativo, contendo informações como: alertas recentes e situação atual da sua localização atual" class="secao-imagem img6"></div>
         </section>
     </main>
     <footer>
