Inserção do Quiz

--- a/gs-webdev/index.html
+++ b/gs-webdev/index.html
@@ -17,13 +17,13 @@
         </a>
         <ul>
             <a href="#secao1"><li>O Problema</li></a>
-            <a href="#secao1"><li>Slideshow</li></a>
+            <a href="#slideshow"><li>Slideshow</li></a>
             <a href="#secao2"><li>Tecnologias</li></a>
             <a href="#secao3"><li>Objetivos</li></a>
             <a href="#secao4"><li>Público</li></a>
             <a href="#secao5"><li>Benefícios</li></a>
             <a href="#secao6"><li>Solução</li></a>
-            <a href="#secao6"><li>Quiz</li></a>
+            <a href="#quiz"><li>Quiz</li></a>
             <a href="#secao6"><li>Formulário</li></a>
         </ul>
     </header>
@@ -39,36 +39,36 @@
         <div alt="Logo HydroSafe Tech" class="secao-imagem logo-imagem"></div>
     </div>
     <section id="slideshow" class="slideshow">
-            <div class="slide-container">
-                <img src="./images/enchente 06.05.jpg" alt="Enchente 1" />
-                <div class="slide-text">🛠️ 1. Planejamento Urbano Inteligente e Inclusivo
-                    A resolução de tragédias recorrentes como enchentes e deslizamentos começa com políticas públicas de urbanização responsável. É essencial revisar o modelo de ocupação do solo, impedindo a construção em áreas de risco e promovendo reassentamento seguro para populações vulneráveis.
-                    Além disso, investimentos em infraestrutura básica de drenagem urbana são urgentes. Com mais de 55% das áreas de risco sem esse serviço, é necessário priorizar obras que incluam bueiros inteligentes, canais de escoamento e zonas de amortecimento de água.
-                    Municípios devem integrar zonas verdes permeáveis em seus planos diretores, contribuindo para a absorção da água da chuva e reduzindo o risco de alagamentos.
-            </div>
-            </div>
+        <div class="slide-container">
+            <img src="./images/enchente 06.05.jpg" alt="Enchente 1" />
+            <div class="slide-text">🛠️ 1. Planejamento Urbano Inteligente e Inclusivo
+                A resolução de tragédias recorrentes como enchentes e deslizamentos começa com políticas públicas de urbanização responsável. É essencial revisar o modelo de ocupação do solo, impedindo a construção em áreas de risco e promovendo reassentamento seguro para populações vulneráveis.
+                Além disso, investimentos em infraestrutura básica de drenagem urbana são urgentes. Com mais de 55% das áreas de risco sem esse serviço, é necessário priorizar obras que incluam bueiros inteligentes, canais de escoamento e zonas de amortecimento de água.
+                Municípios devem integrar zonas verdes permeáveis em seus planos diretores, contribuindo para a absorção da água da chuva e reduzindo o risco de alagamentos.
+        </div>
+        </div>
 
-            <div class="slide-container" style="display: none;">
-                <img src="./images/tecnologia-e-seguranca-3-1-1024x683.jpg" alt="Enchente 2" />
-                <div class="slide-text">📡 2. Tecnologia e Monitoramento em Tempo Real
-                    O Brasil precisa transformar a maneira como lida com desastres naturais através do uso de tecnologia de ponta. Sistemas de alerta precoce — como os utilizados com sucesso no Japão e na Holanda — podem ser implantados em larga escala no país, conectando redes de sensores em áreas críticas com sirenes, aplicativos e mensagens SMS para evacuação imediata.
-                    O fortalecimento de instituições como o CEMADEN é estratégico: ampliar seu orçamento, recursos humanos e integração com defesas civis locais pode salvar milhares de vidas.
-                    Além disso, plataformas digitais com dados abertos e atualizados sobre áreas de risco, histórico de enchentes e rotas de fuga devem ser desenvolvidas e popularizadas entre a população.
-                </div>
+        <div class="slide-container" style="display: none;">
+            <img src="./images/tecnologia-e-seguranca-3-1-1024x683.jpg" alt="Enchente 2" />
+            <div class="slide-text">📡 2. Tecnologia e Monitoramento em Tempo Real
+                O Brasil precisa transformar a maneira como lida com desastres naturais através do uso de tecnologia de ponta. Sistemas de alerta precoce — como os utilizados com sucesso no Japão e na Holanda — podem ser implantados em larga escala no país, conectando redes de sensores em áreas críticas com sirenes, aplicativos e mensagens SMS para evacuação imediata.
+                O fortalecimento de instituições como o CEMADEN é estratégico: ampliar seu orçamento, recursos humanos e integração com defesas civis locais pode salvar milhares de vidas.
+                Além disso, plataformas digitais com dados abertos e atualizados sobre áreas de risco, histórico de enchentes e rotas de fuga devem ser desenvolvidas e popularizadas entre a população.
             </div>
+        </div>
 
-            <div class="slide-container" style="display: none;">
-                <img src="./images/fafd7e10-1433-4182-b560-4d577e3276c8.webp" alt="Enchente 3" />
-                <div class="slide-text">💼 3. Educação Comunitária e Participação Cidadã
-                    A tecnologia e a infraestrutura são fundamentais, mas a prevenção também passa pela educação e mobilização da sociedade. Programas de formação comunitária em gestão de riscos podem preparar moradores de áreas vulneráveis para agirem de forma rápida e organizada em momentos de crise.
-                    Escolas, centros comunitários e postos de saúde devem funcionar como hubs de conscientização, ensinando desde crianças a identificar sinais de risco até adultos a montarem kits de emergência.
-                    Além disso, governos podem promover consultas públicas e plataformas participativas para que a população contribua com dados locais, ajudando no mapeamento de risco e cobrando ações do poder público com base em evidências.</div>
-            </div>
+        <div class="slide-container" style="display: none;">
+            <img src="./images/fafd7e10-1433-4182-b560-4d577e3276c8.webp" alt="Enchente 3" />
+            <div class="slide-text">💼 3. Educação Comunitária e Participação Cidadã
+                A tecnologia e a infraestrutura são fundamentais, mas a prevenção também passa pela educação e mobilização da sociedade. Programas de formação comunitária em gestão de riscos podem preparar moradores de áreas vulneráveis para agirem de forma rápida e organizada em momentos de crise.
+                Escolas, centros comunitários e postos de saúde devem funcionar como hubs de conscientização, ensinando desde crianças a identificar sinais de risco até adultos a montarem kits de emergência.
+                Além disso, governos podem promover consultas públicas e plataformas participativas para que a população contribua com dados locais, ajudando no mapeamento de risco e cobrando ações do poder público com base em evidências.</div>
+        </div>
 
-            <div class="slide-controls">
-                <button onclick="changeSlide(-1)">⟨ Anterior</button>
-                <button onclick="changeSlide(1)">Próximo ⟩</button>
-            </div>
+        <div class="slide-controls">
+            <button onclick="changeSlide(-1)">⟨ Anterior</button>
+            <button onclick="changeSlide(1)">Próximo ⟩</button>
+        </div>
     </section>
     <main>
         <section class="secao" id="secao1">
@@ -306,6 +306,12 @@
                 </div>
             </div>
             <div alt="Imagem da Tela Inicial do nosso Aplicativo, contendo informações como: alertas recentes e situação atual da sua localização atual" class="secao-imagem img6"></div>
+        </section>
+        <section id="quiz" class="quiz">
+            <h2 style="color: white;">Quiz Interativo</h2>
+            <div id="quiz-container"></div>
+            <button id="submit-quiz">Enviar</button>
+            <p id="quiz-result"></p>
         </section>
     </main>
     <footer>
