--- a/gs-webdev/index.html
+++ b/gs-webdev/index.html
@@ -313,6 +313,15 @@
             <button id="submit-quiz">Enviar</button>
             <p id="quiz-result"></p>
         </section>
+        <section id="form" class="form">
+            <h2>Formulário</h2>
+            <form id="contact-form">
+                <input type="text" id="nome" placeholder="Nome*" required />
+                <input type="email" id="email" placeholder="Email*" required />
+                <textarea id="mensagem" placeholder="Mensagem*" required></textarea>
+                <button type="submit">Enviar</button>
+            </form>
+        </section>
     </main>
     <footer>
         <div class="vertical">
