Correção do Menu e Começo da criação do Menu Hamburguer

--- a/gs-webdev/index.html
+++ b/gs-webdev/index.html
@@ -24,7 +24,10 @@
             <a href="#secao5"><li>Benefícios</li></a>
             <a href="#secao6"><li>Solução</li></a>
             <a href="#quiz"><li>Quiz</li></a>
-            <a href="#secao6"><li>Formulário</li></a>
+            <a href="#form"><li>Formulário</li></a>
+            <li>
+                <div id="menu"></div>
+            </li>
         </ul>
     </header>
     <div id="inicio">
