Menu Hamburguer Inicial

--- a/gs-webdev/index.html
+++ b/gs-webdev/index.html
@@ -8,6 +8,21 @@
     <title>HydroSafe Tech</title>
 </head>
 <body>
+    <div id="secaoMenu"></div>
+    <div id="menu">
+        <ul>
+            <a href="#secao1"><li>O Problema</li></a>
+            <a href="#slideshow"><li>Slideshow</li></a>
+            <a href="#secao2"><li>Tecnologias</li></a>
+            <a href="#secao3"><li>Objetivos</li></a>
+            <a href="#secao4"><li>Público</li></a>
+            <a href="#secao5"><li>Benefícios</li></a>
+            <a href="#secao6"><li>Solução</li></a>
+            <a href="#quiz"><li>Quiz</li></a>
+            <a href="#form"><li>Formulário</li></a>
+            <li id="sair" style="color: white;">X</li>
+        </ul>
+    </div>
     <header>
         <a href="#inicio">
         <div>
@@ -26,7 +41,7 @@
             <a href="#quiz"><li>Quiz</li></a>
             <a href="#form"><li>Formulário</li></a>
             <li>
-                <div id="menu"></div>
+                <div id="menubotao"></div>
             </li>
         </ul>
     </header>
