--- a/gs-webdev/index.html
+++ b/gs-webdev/index.html
@@ -10,6 +10,10 @@
 <body>
     <div id="secaoMenu"></div>
     <div id="menu">
+        <div>
+            <img src="images/logo.png" alt="Logo HydroSafe Tech" id="logo">
+            <h3>HydroSafe Tech</h3>
+        </div>
         <ul>
             <a href="#slideshow"><li>Slideshow</li></a>
             <a href="#secao1"><li>O Problema</li></a>
