Criação dos Temas de Cores

--- a/gs-webdev/index.html
+++ b/gs-webdev/index.html
@@ -43,6 +43,9 @@
             <a href="#secao6"><li>Solução</li></a>
             <a href="#quiz"><li>Quiz</li></a>
             <a href="#form"><li>Formulário</li></a>
+            <li class="iconeTema" onclick="aplicarTema('claro')"></li>
+            <li class="iconeTema ic2" onclick="aplicarTema('escuro')"></li>
+            <li class="iconeTema ic3" onclick="aplicarTema('reverso')"></li>
             <li onclick="abrirMenu()">
                 <div id="menubotao"></div>
             </li>
